--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -90,7 +90,7 @@
       margin-left: 1rem;
 
       @include mq($desktop-width, up) {
-        margin-left: 0.5rem;
+        margin-left: 0.2rem;
       }
     }
   }
